--- a/inbdex.html
+++ b/inbdex.html
@@ -3,35 +3,62 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>My Sister Radhika ❤️</title>
+<title>For My Lovely Sister ❤️</title>
 
 <style>
 body{
     margin:0;
     padding:0;
     font-family:Arial, sans-serif;
-    background:radial-gradient(circle at top,#141e30,#090a0f);
-    color:white;
-    text-align:center;
+    background:linear-gradient(to bottom,#1d2671,#c33764);
     overflow:hidden;
+    text-align:center;
+    color:white;
 }
 
-/* animated title */
+/* title */
 h1{
     margin-top:40px;
-    font-size:55px;
-    background:linear-gradient(90deg,#ff9a9e,#fad0c4,#ff9a9e);
-    background-size:200%;
-    -webkit-background-clip:text;
-    color:transparent;
-    animation:shine 4s linear infinite;
-}
-@keyframes shine{
-    0%{background-position:0%;}
-    100%{background-position:200%;}
+    font-size:50px;
+    color:#ffd1dc;
+    text-shadow:0 0 20px pink;
 }
 
-/* floating hearts */
+/* teddy animation */
+.teddy{
+    position:absolute;
+    bottom:20px;
+    left:-200px;
+    font-size:130px;
+    animation:walk 7s linear forwards;
+}
+
+@keyframes walk{
+    0%{left:-200px;}
+    100%{left:40%;}
+}
+
+/* surprise box */
+.surprise{
+    position:absolute;
+    bottom:220px;
+    left:50%;
+    transform:translateX(-50%);
+    background:rgba(255,255,255,0.1);
+    padding:30px;
+    border-radius:25px;
+    display:none;
+    backdrop-filter:blur(8px);
+    box-shadow:0 0 30px rgba(255,255,255,0.4);
+    animation:fade 2s ease;
+}
+
+@keyframes fade{
+    from{opacity:0; transform:translateY(40px);}
+    to{opacity:1; transform:translateY(0);}
+}
+
+/* hearts */
 .heart{
     position:fixed;
     bottom:-10px;
@@ -41,104 +68,30 @@ h1{
     0%{transform:translateY(0);opacity:1;}
     100%{transform:translateY(-900px);opacity:0;}
 }
-
-/* stars */
-.star{
-    position:fixed;
-    width:2px;
-    height:2px;
-    background:white;
-    animation:twinkle 2s infinite alternate;
-}
-@keyframes twinkle{
-    from{opacity:0.3;}
-    to{opacity:1;}
-}
-
-/* letter box */
-.box{
-    width:75%;
-    margin:50px auto;
-    padding:35px;
-    border-radius:25px;
-    background:rgba(255,255,255,0.06);
-    backdrop-filter:blur(8px);
-    box-shadow:0 0 40px rgba(255,105,180,0.5);
-    animation:updown 3s ease-in-out infinite alternate;
-}
-@keyframes updown{
-    from{transform:translateY(0);}
-    to{transform:translateY(-20px);}
-}
-
-/* typing */
-.typing{
-    font-size:26px;
-    border-right:3px solid white;
-    width:0;
-    overflow:hidden;
-    white-space:nowrap;
-    margin:auto;
-    animation:typing 6s steps(40,end) forwards, blink 1s infinite;
-}
-@keyframes typing{
-    from{width:0;}
-    to{width:100%;}
-}
-@keyframes blink{
-    50%{border-color:transparent;}
-}
-
-/* button */
-button{
-    padding:15px 30px;
-    font-size:18px;
-    border:none;
-    border-radius:30px;
-    background:#ff7eb3;
-    color:white;
-    cursor:pointer;
-    margin-top:25px;
-}
-button:hover{
-    background:white;
-    color:#ff7eb3;
-}
 </style>
 </head>
 
 <body>
 
-<h1>My Lovely Sister Radhika ❤️</h1>
+<h1>For My Lovely Sister ❤️</h1>
 
-<div class="box">
-<div class="typing">Best Sister in the World 💖</div>
+<!-- Teddy -->
+<div class="teddy">🧸</div>
 
-<p style="margin-top:25px;font-size:20px;line-height:1.8;">
-Dear Radhika Didi,  
-You are not only my elder sister but also my second mother, my guide and my best friend.  
-Your love, care and support make my life beautiful every day.  
-
-Thank you for always standing with me, protecting me and guiding me.  
-I feel lucky to have such a wonderful and loving sister like you.  
-
-No matter where life takes us, you will always be my strongest support and my forever family.  
-I pray that you always stay happy, successful and smiling.  
-
-I love you so much didi ❤️
-</p>
-
-<button onclick="surprise()">Click Here Didi 💌</button>
-<h2 id="msg"></h2>
+<!-- Surprise -->
+<div class="surprise" id="box">
+<h2>Surprise for You 💖</h2>
+<p>You are the best sister in the world 🌸</p>
+<p>Always stay happy and smiling ❤️</p>
 </div>
 
 <script>
-function surprise(){
-document.getElementById("msg").innerHTML=
-"Radhika Didi ❤️ You are my pride, my strength and my forever support!";
-}
+/* show surprise after teddy arrives */
+setTimeout(()=>{
+document.getElementById("box").style.display="block";
+},7000);
 
-/* hearts */
+/* floating hearts */
 setInterval(()=>{
 let heart=document.createElement("div");
 heart.className="heart";
@@ -148,15 +101,6 @@ heart.style.fontSize=(Math.random()*20+20)+"px";
 document.body.appendChild(heart);
 setTimeout(()=>heart.remove(),6000);
 },300);
-
-/* stars */
-for(let i=0;i<120;i++){
-let star=document.createElement("div");
-star.className="star";
-star.style.left=Math.random()*100+"vw";
-star.style.top=Math.random()*100+"vh";
-document.body.appendChild(star);
-}
 </script>
 
 </body>
